[gd_scene load_steps=15 format=3 uid="uid://cqhdd3kgdbj01"]

[ext_resource type="Script" path="res://scripts/Terminal.gd" id="1_ldxf0"]
[ext_resource type="FontFile" uid="uid://c1e3btsfh3mx6" path="res://assets/fonts/SourceCodePro-VariableFont_wght.ttf" id="2_w6ifs"]
[ext_resource type="Theme" uid="uid://cyrgleki50jp0" path="res://assets/themes/MainTheme.tres" id="3_ddlu4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4iwi4"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="FontVariation" id="FontVariation_maj24"]
base_font = ExtResource("2_w6ifs")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1hcgy"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0aywd"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_is7m6"]
bg_color = Color(0.105882, 0.105882, 0.105882, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gceak"]
bg_color = Color(0.6, 0.0313726, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ten0"]
bg_color = Color(0.52549, 0.00392157, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_14xmd"]
bg_color = Color(0.878431, 0, 0.0666667, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3fymf"]
bg_color = Color(0.262745, 0.262745, 0.262745, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dif2v"]
bg_color = Color(0.517647, 0.498039, 0.521569, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ii5t"]
bg_color = Color(0.67451, 0.67451, 0.67451, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ldxf0")

[node name="Terminal" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -538.5
offset_top = -355.0
offset_right = 538.5
offset_bottom = 355.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4iwi4")

[node name="CommandLine" type="TextEdit" parent="Terminal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_maj24")
theme_override_font_sizes/font_size = 21
theme_override_styles/normal = SubResource("StyleBoxFlat_1hcgy")
theme_override_styles/read_only = SubResource("StyleBoxFlat_0aywd")
placeholder_text = "_"

[node name="Toolbar" type="Panel" parent="Terminal"]
layout_mode = 0
offset_right = 1077.0
offset_bottom = 55.0
theme_override_styles/panel = SubResource("StyleBoxFlat_is7m6")

[node name="Terminal_X" type="Button" parent="Terminal/Toolbar"]
layout_mode = 0
offset_left = 1030.0
offset_top = 9.0
offset_right = 1068.0
offset_bottom = 47.0
theme_override_styles/normal = SubResource("StyleBoxFlat_gceak")
theme_override_styles/hover = SubResource("StyleBoxFlat_5ten0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_14xmd")
text = "X"

[node name="Terminal_M" type="Button" parent="Terminal/Toolbar"]
layout_mode = 0
offset_left = 981.0
offset_top = 8.0
offset_right = 1019.0
offset_bottom = 46.0
theme_override_styles/normal = SubResource("StyleBoxFlat_3fymf")
theme_override_styles/hover = SubResource("StyleBoxFlat_dif2v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0ii5t")
text = "__"

[node name="Title" type="Label" parent="Terminal/Toolbar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -13.0
offset_right = 416.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ddlu4")
text = "Terminal"
horizontal_alignment = 1

[node name="Dragger" type="Button" parent="Terminal/Toolbar"]
layout_mode = 0
offset_right = 971.0
offset_bottom = 53.0
focus_mode = 0
flat = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Terminal/Toolbar/Terminal_X" to="." method="_on_terminal_x_pressed"]
[connection signal="pressed" from="Terminal/Toolbar/Terminal_M" to="." method="_on_terminal_m_pressed"]
